<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:id="@+id/userProfileCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userprofile.UserProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
...
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/workoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="Workouts"
        app:layout_constraintEnd_toStartOf="@+id/progressBtn"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/progressBtn"
        android:layout_width="wrap_content"
...
