<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/list_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="sample"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>